# cli-llm-forensic

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.claude/: panel0-rules.md  panel1-rules.md  settings.json
.claude/commands/: dev-diff.md  dev-pull.md  dev-push.md  dev-spawn.md  dev-start.md  dev-swap.md
.claude/hooks/: managed-file-warn.sh  notify-main.sh
.codex/: hooks.json
.codex/hooks/: notify-main.sh
clfx/: cli.py  discover.py  event.py  parser.py  paste.py  roio.py
clfx/analyze/: artifacts.py  attribution.py  keywords.py  mcp.py  secrets.py  timeline.py
clfx/query/: engine.py  llm.py
clfx/sources/: claude.py
clfx/web/: api.py  server.py
docs/: INDEX.md  STATE.md  UI-변경사항.md  event-schema.md  exe-패키징-UI-가이드.md  llm-handoff.md  plan.md  교수님-피드백.md  논문대비-신규발견.md  발표-가이드라인.md  사용법.md  설계.md  스테이징-데이터셋-가이드.md  실측-temp-원본보존-원리.md  역할분담.md  정확도-검증-시나리오.md
packaging/: build-exe.bat  build.md  launcher.py
tests/: codex-review.test.sh  conftest.py  final-verify.test.sh  test_artifacts.py  test_attribution.py  test_cli_analyze.py  test_cli_parse.py  test_cli_query.py  test_discover.py  test_e2e_ab.py  test_engine_aggregates.py  test_engine_cache.py  test_event.py  test_fixtures.py  test_keywords.py  test_launcher.py  test_llm_ollama.py  test_mcp.py  test_parser.py  test_paste.py  test_query_engine.py  test_query_llm.py  test_roio.py  test_secrets.py  test_sources.py  test_timeline.py  test_web_aggregates.py  test_web_api.py  test_web_app_js.py  test_web_csv.py  test_web_forensic_views_js.py  test_web_scan.py  test_web_server.py
(+24 files in other folders)
